--- a/src/app/components/bookings/bookings.page.html
+++ b/src/app/components/bookings/bookings.page.html
@@ -10,7 +10,11 @@
 <ion-content [fullscreen]="true">
   <ion-grid>
     <ion-row>
-      <ion-col size-md="6" offset-md="3" *ngIf="loadedBookings.length > 0">
+      <ion-col
+        size-md="6"
+        offset-md="3"
+        *ngIf="loadedBookings && loadedBookings.length > 0"
+      >
         <ion-list>
           <ion-item-sliding
             *ngFor="let booking of loadedBookings"
@@ -19,7 +23,7 @@
             <ion-item>
               <ion-label>
                 <h5 [textContent]="booking.placeTitle"></h5>
-                <p>Guests: {{ booking.questNumber }}</p>
+                <p>Guests: {{ booking.guestNumber }}</p>
               </ion-label>
             </ion-item>
             <ion-item-options>
@@ -32,7 +36,10 @@
           </ion-item-sliding>
         </ion-list>
       </ion-col>
-      <ion-col *ngIf="loadedBookings.length === 0" class="ion-padding">
+      <ion-col
+        *ngIf="!loadedBookings || loadedBookings.length === 0"
+        class="ion-padding"
+      >
         <ion-label><h2>You have not booked anything</h2></ion-label>
         <ion-button routerLink="/places/offers" color="third-booking"
           >Return to the Offers</ion-button
