--- a/src/app/components/places/components/discover/discover.page.html
+++ b/src/app/components/places/components/discover/discover.page.html
@@ -24,29 +24,34 @@
       ><ion-label>Bookable Places</ion-label></ion-segment-button
     >
   </ion-segment>
-  <ion-grid>
+  <ion-grid *ngIf="!relevantPlaces || relevantPlaces.length === 0">
+    <ion-row>
+      <ion-col size="12" sizeSm="8" offsetSm="2"> </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-grid *ngIf="relevantPlaces.length > 0">
     <ion-row>
       <ion-col size="12" sizeSm="8" offsetSm="2">
         <ion-card color="fourth-booking">
-          <ion-img [src]="places[0].imageUrl"></ion-img>
+          <ion-img [src]="relevantPlaces[0].imageUrl"></ion-img>
           <ion-card-header>
             <ion-card-title
-              [textContent]="places[0].title"
+              [textContent]="relevantPlaces[0].title"
               color="primary-booking"
             ></ion-card-title>
             <ion-card-subtitle
-              [textContent]="(places[0].price | currency) + ' / Night'"
+              [textContent]="(relevantPlaces[0].price | currency) + ' / Night'"
               color="primary-booking"
             ></ion-card-subtitle>
           </ion-card-header>
           <ion-card-content color="primary-booking">
-            <p [textContent]="places[0].description"></p>
+            <p [textContent]="relevantPlaces[0].description"></p>
           </ion-card-content>
           <div>
             <ion-button
               fill="clear"
               color="third-booking"
-              [routerLink]="['/', 'places', 'discover', places[0]._id]"
+              [routerLink]="['/', 'places', 'discover', relevantPlaces[0]._id]"
             >
               More</ion-button
             >
@@ -58,7 +63,7 @@
       <ion-col size="12" sizeSm="8" offsetSm="2">
         <ion-list>
           <ion-item
-            *ngFor="let place of places.slice(1)"
+            *ngFor="let place of listedLoadedPlaces"
             [routerLink]="['/', 'places', 'discover', place._id]"
             detail
           >
