--- a/src/app/components/places/components/offers/offers.page.html
+++ b/src/app/components/places/components/offers/offers.page.html
@@ -17,7 +17,16 @@
   <ion-grid>
     <ion-row>
       <ion-col size="12" sizeSm="8" offsetSm="2">
-        <ion-list>
+        <div *ngIf="isLoading" class="ion-text-center">
+          <ion-spinner color="third-booking"></ion-spinner>
+        </div>
+        <div *ngIf="!isLoading && places.length === 0" class="ion-text-center">
+          <p>No offers found! Please create one first!</p>
+          <ion-button color="third-booking" routerLink="/places/offers/new"
+            >Offer new place</ion-button
+          >
+        </div>
+        <ion-list *ngIf="!isLoading && places.length > 0">
           <ion-item-sliding *ngFor="let place of places" #slidingItem>
             <offer-item [place]="place"></offer-item>
             <ion-item-options>
